app styling updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "eMumba Championship",
-  "name": "eMumba Championship",
+  "short_name": "eMumba Champions Cup",
+  "name": "eMumba Champions Cup",
   "icons": [
     {
       "src": "favicon.png",
